some code added and changed

--- a/index.html
+++ b/index.html
@@ -12,19 +12,16 @@
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
-    <header>
-        <div class="banner-main">
+    <header class="header-container">
             <div class="banner">
                 <h1 class="banner-title-main banner-title">All Thinks Are <br> Possible If You <br> believe</h1>
-            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
-            <button class="banner-btn btn-primary">Contact Us</button>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <button class="banner-btn btn-primary">Contact Us</button>
             </div>
-            
-        </div>
     </header>
 
     <main>
-
+        
     </main>
 
     <footer>
