main section is added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     </header>
 
     <main>
-        
+        <section class="my-failures">
+            .my-failures-image
+        </section>
     </main>
 
     <footer>
